--- a/Sebastian 2.html
+++ b/Sebastian 2.html
@@ -68,14 +68,14 @@
       <h2 style="text-align: center">Bildegalleri</h2>
       <p></p>
       <div>
-        <img src="./bilder/IMG_0247.JPG" alt="bildetne" ; width="420px">
+        <img src="./IMG_0247.JPG" alt="bildetne" ; width="420px">
       </div>
       <div>
 
-        <img src="./bilder/IMG_0244.JPG" alt="paris" ; width="370px">
+        <img src="./IMG_0244.JPG" alt="paris" ; width="370px">
       </div>
       <div>
-        <img src="./bilder/IMG_0568 2.JPG" alt="bildeonedrive" ; width="340px">
+        <img src="./IMG_0568 2.JPG" alt="bildeonedrive" ; width="340px">
       </div>
 
     </div>
